# datagenerator

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
corpus/: .gitignore
corpus/src/arxiv_corpus/: cli.py  download.py  filters.py
examples/: arxiv.yaml
src/: cli.ts  config.ts  dataclaw-config.ts  index.ts  onboarding.ts  providers.ts  repl.ts  run-from-config.ts  runtime.ts  template.ts
src/arxiv_corpus/: __init__.py  convert.py  oai.py  publish.py
src/sources/: arxiv.ts
test/: arxiv.test.ts  datagen.test.ts  providers.test.ts  template.test.ts
tests/: test_download.py  test_filters.py  test_oai.py
